feat: implement task listing and creation - display tasks and action buttons dynamically - allow task creation with title and description - define a js entrypoint for each html page - improve authentication flow

--- a/frontend/style/components.css
+++ b/frontend/style/components.css
@@ -6,3 +6,17 @@ a{
     text-decoration: none;
     color: black;
 }
+label{
+    display: block;
+    margin-bottom: 10px;
+}
+button{
+    display: block;
+    margin-bottom: 10px;
+}
+.divButton{
+    display: flex;
+    gap: 5px;
+    justify-content: flex-start;
+    align-items: center;
+}
