feat: implement task status change (completed or pending)

--- a/frontend/style/components.css
+++ b/frontend/style/components.css
@@ -14,9 +14,6 @@ button{
     display: block;
     margin-bottom: 10px;
 }
-.divButton{
-    display: flex;
-    gap: 5px;
-    justify-content: flex-start;
-    align-items: center;
+.undone{
+    text-decoration: line-through;
 }
