style(task): adjust form layout and list design

--- a/frontend/style/components.css
+++ b/frontend/style/components.css
@@ -1,15 +1,31 @@
-input{
-    display: block;
-    margin-bottom: 10px;
+textarea {
+    resize: none;
 }
-a{
+
+input,
+textarea,
+select {
+    display: block;
+    font-size: 1rem;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+select {
+    width: 80px;
+}
+
+a {
     color: black;
 }
-label{
+
+label {
     display: block;
     margin-bottom: 10px;
 }
-button{
+
+button {
     display: block;
     margin-bottom: 10px;
 }
