--- a/frontend/style/global.css
+++ b/frontend/style/global.css
@@ -5,6 +5,7 @@ html, body{
 }
 
 body{
+    overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
@@ -20,4 +21,16 @@ body{
     text-align: center;
     color: green;
     font-weight: bold;
+}
+
+/* VARIABLES */
+:root {
+    --done: #16A34A;
+    --done-hover: #15803D;
+    --delete: #DC2626;
+    --delete-hover: #B91C1C;
+    --edit: #FFD700;
+    --edit-hover: #FFA500;
+    --disabled-bg: #E5E7EB;
+    --disabled-text: #9CA3AF;
 }
