--- a/frontend/style/tasks.css
+++ b/frontend/style/tasks.css
@@ -1,11 +1,94 @@
-/* COMPONENTS */
-.undone {
-    text-decoration: line-through;
+/* LAYOUT */
+.container {
+    display: grid;
+    height: 100%;
+    grid-template-rows: auto 1fr;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main {
+    display: grid;
+    width: 100%;
+    grid-template-columns: auto 1fr;
+    margin: auto 10px auto 10px;
+}
+
+.queryContainer {
+    height: auto;
+    border: 1px solid black;
+}
+
+.search {
+    padding: 20px;
+    display: grid;
+    grid-template-rows: auto auto;
+    margin: 40px auto;
+}
+
+.searchBar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+}
+
+.counter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
 }
 
 .tooltip {
     position: relative;
     display: inline-block;
+}
+
+.divButton {
+    display: flex;
+    gap: 10px;
+}
+
+/* COMPONENTS */
+.undone {
+    text-decoration: line-through;
+}
+
+.delete:disabled,
+.doneButton:disabled,
+.edit:disabled {
+    background-color: var(--disabled-bg);
+    color: var(--disabled-text);
+}
+
+.edit {
+    background-color: var(--edit);
+}
+
+.edit:hover:not(:disabled) {
+    background-color: var(--edit-hover);
+}
+
+.delete {
+    background-color: var(--delete);
+    color: white;
+}
+
+.delete:hover:not(:disabled) {
+    background-color: var(--delete-hover);
+}
+
+.doneButton {
+    background-color: var(--done);
+    color: white;
+}
+
+.doneButton:hover:not(:disabled) {
+    background-color: var(--done-hover);
 }
 
 .tooltipText {
@@ -23,4 +106,55 @@
 
 .tooltip:hover .tooltipText {
     visibility: visible;
+}
+
+.header button {
+    background-color: red;
+    height: 40px;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 1rem;
+    margin: 10px;
+}
+
+.header h1 {
+    margin: 20px auto 0 auto;
+}
+
+.field {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+}
+
+.field label,
+.field input,
+.field textarea {
+    margin: 10px auto 10px;
+    width: 100%;
+    max-width: 250px;
+}
+
+.form {
+    margin: 5px;
+}
+
+.form button {
+    background-color: #4F46E5;
+    color: white;
+    font-size: 1rem;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    margin: 10px auto 0 auto;
+}
+
+.divButton button {
+    padding: 8px;
+    font-size: 1rem;
+    border-radius: 10px;
+    width: 70px;
 }
