--- a/frontend/style/tasks.css
+++ b/frontend/style/tasks.css
@@ -12,14 +12,25 @@
 
 .main {
     display: grid;
-    width: 100%;
     grid-template-columns: auto 1fr;
-    margin: auto 10px auto 10px;
+    gap: 24px;
+    padding: 0 24px;
+    align-items: center;
 }
 
+.listContainer,
 .queryContainer {
-    height: auto;
+    height: 500px;
     border: 1px solid black;
+}
+
+.listContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    overflow-y: auto;
 }
 
 .search {
@@ -54,8 +65,13 @@
 }
 
 /* COMPONENTS */
+.done,
 .undone {
-    text-decoration: line-through;
+    font-weight: bold;
+}
+
+.undone {
+    color: green;
 }
 
 .delete:disabled,
